# mcp-server

./: .env.example  pyproject.toml
src/: launch.py
src/mcp_server/: main.py
src/mcp_server/model/: weather.py
