[project]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Yu Cheng",email = "yucheng@mirle.com.tw"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastmcp (>=2.1.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mcp_server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
